--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -93,6 +93,18 @@
   max-height: 576px
   position: absolute
   z-index: 999
+  .hero-carousel-control
+    position: absolute
+    bottom: 0
+    right: 0px
+    font-size: 65px
+    background: gray
+    height: 130px
+    vertical-align: middle
+    width: 50px
+    text-align: center
+    padding: 35px 0px
+    @include boxsizing
 
 #hero-video
   margin-top: 40px
