--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -15,7 +15,7 @@
           #hero-player
       .span1
         = link_to '#', id: 'player-close' do
-          %h3 close
+          %p close
 
 .row
   .span12
