--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,7 +20,7 @@
     .navbar.navbar-fixed-top
       .navbar-inner
         .container
-          = link_to 'ChefSteps', root_url, class: 'brand'
+          = link_to 'chefsteps', root_url, class: 'brand'
           %button.btn.btn-navbar{data: {toggle: 'collapse', target: '.nav-collapse'}}
             %span.icon-bar
             %span.icon-bar
