btn navbar styling

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -140,6 +140,17 @@ $dark-orange: #D25029
     color: white
     text-transform: uppercase
     font-weight: 200
+  .btn-navbar
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from($orange), to($dark-orange))
+    background-image: -moz-linear-gradient(top, $orange, $dark-orange)
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=$orange, endColorstr=$dark-orange, GradientType=0)
+    background-color: $orange
+    border-color: $dark-orange
+    .icon-bar
+      background-color: white
+    &:hover
+      background-image: none
+      background-color: $dark-orange
 
 // BELOW ARE RESPONSIVE STYLES //
 
