--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -52,7 +52,6 @@ $dark-orange: #D25029
 
 .media-centered-medium
   width: 100%
-  min-height: 210px
   margin-bottom: 20px
 
 .media-hero
@@ -108,6 +107,14 @@ $dark-orange: #D25029
       width: 20%
     .step-content
       width: 70%
+
+.carousel-small
+  overflow: auto
+  .carousel-small-inner
+    height: 160px
+    .item
+      width: 285px
+      float: left
 
 ////////////////////////////////////////
 
