--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -52,13 +52,11 @@
           = render 'equipment_list', equipment: @activity.required_equipment
       .span6
         %h3 Techniques
-        .carousel.slide#technique-carousel
-          .carousel-inner
+        .carousel-small#technique-carousel
+          .carousel-small-inner
             - @techniques.each_with_index do |technique,index|
               %div{class: "item #{'active' if index == 0}"}
                 = render 'shared/media_centered', media: technique, media_image: technique.step_images.last, main: 'Technique'
-          = link_to '&lsaquo;'.html_safe, '#technique-carousel', class: 'carousel-control left', data: {slide: 'prev'}
-          = link_to '&rsaquo;'.html_safe, '#technique-carousel', class: 'carousel-control right', data: {slide: 'next'}
         %h3 You might also like
         .carousel.slide#related-carousel
           .carousel-inner
