update carousel small

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -115,6 +115,7 @@ $dark-orange: #D25029
     .item
       width: 285px
       float: left
+      display: none
 
 ////////////////////////////////////////
 
