recipe gallery height fix

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -159,6 +159,11 @@ $dark-orange: #D25029
     border-width: 0px !important
     box-shadow: none !important
 
+#recipe-gallery
+  .media-centered
+    img
+      height: 210px
+
 /* Buttons *.
 .btn-play
   width: 100px
