--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -187,10 +187,11 @@ $dark-orange: #D25029
     position: absolute
     width: 0px
     height: 0px
-    border-top: 25px solid transparent
-    border-bottom: 25px solid transparent
-    border-left: 40px solid white
-    margin: 15px 25px
+    border-top: 20px solid transparent
+    border-bottom: 20px solid transparent
+    border-left: 30px solid white
+    margin: 20px 30px
+    opacity: .5
 
 /* Navbar */
 .navbar-fixed-top
