--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -7,7 +7,10 @@
             %div{class: "item #{'active' if index == 0}", id: "#{'hero-first' if index == 0}"}
               = render 'shared/media_hero', main_title: 'Recipe', media_image: recipe.step_images.last, media_object: recipe
         = link_to '#hero-carousel', class: 'hero-carousel-control right', data: {slide: 'next'} do
-          %i.icon-chevron-right
+          / %i.icon-chevron-right
+          .btn-next
+            .btn-next-icon-top
+            .btn-next-icon-bottom
   .container#hero-video
     .row
       .span10.offset1
