--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -18,13 +18,13 @@
             = link_to 'Discuss this on the forum', '#', class: 'btn'
             = link_to 'Email this Recipe', '#', class: 'btn'
           .span2
-            = link_to '#' do
+            = link_to '#', class: 'btn-circle' do
               %i.icon-facebook
-            = link_to '#' do
+            = link_to '#', class: 'btn-circle' do
               %i.icon-google-plus
-            = link_to '#' do
+            = link_to '#', class: 'btn-circle' do
               %i.icon-twitter
-            = link_to '#' do
+            = link_to '#', class: 'btn-circle' do
               %i.icon-pinterest
       .span6
         .ordered-steps
