--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -232,6 +232,30 @@ $dark-orange: #D25029
     background: white
     top: 50%
 
+.btn-circle
+  height: 20px
+  width: 20px
+  padding: 10px
+  margin: 5px 0px
+  border-radius: 50%
+  background: $orange
+  background-image: none
+  color: white
+  font-size: 20px
+  text-shadow: none
+  text-align: center
+  transition: box-shadow 200ms
+  -webkit-transition: -webkit-box-shadow 200ms
+  -moz-transition: -moz-box-shadow 200ms
+  -o-transition: -o-box-shadow 200ms
+  display: inline-block
+  i
+    line-height: 22px
+  &:hover
+    @include shadow
+    text-decoration: none
+    color: white
+
 /* Navbar */
 .navbar-fixed-top
   .navbar-inner
