--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -11,6 +11,12 @@
   -webkit-box-shadow: 0px 0px 8px #888888
   -o-box-shadow: 0px 0px 8px #888888
 
+=dark-shadow
+  box-shadow: 0px 0px 5px black
+  -moz-box-box-shadow: 0px 0px 5px black
+  -webkit-box-shadow: 0px 0px 5px black
+  -o-box-shadow: 0px 0px 5px black
+
 =radius($value)
   border-radius: $value
   -moz-border-radius: $value
@@ -244,15 +250,15 @@ $dark-orange: #D25029
   font-size: 20px
   text-shadow: none
   text-align: center
-  transition: box-shadow 200ms
-  -webkit-transition: -webkit-box-shadow 200ms
-  -moz-transition: -moz-box-shadow 200ms
-  -o-transition: -o-box-shadow 200ms
+  transition: background 200ms
+  -webkit-transition: background 200ms
+  -moz-transition: background 200ms
+  -o-transition: background 200ms
   display: inline-block
   i
     line-height: 22px
   &:hover
-    @include shadow
+    background: $dark-orange
     text-decoration: none
     color: white
 
