--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -112,13 +112,15 @@ $dark-orange: #D25029
       width: 10%
       text-align: center
       color: white
-      font-size: 50px
-      line-height: 60px
+      font-size: 30px
+      line-height: 40px
       background-color: $orange
     .step-image
       width: 20%
+      padding-top: 0px
     .step-content
       width: 70%
+      padding-top: 0px
 
 .carousel-small
   overflow: auto
@@ -177,6 +179,14 @@ $dark-orange: #D25029
   .media-centered
     img
       height: 210px
+
+.activity-ingredients-list
+  th#ingredient
+    text-align: left
+  th#quantity
+    text-align: right
+  td.quantity-group
+    text-align: right
 
 /* Buttons *.
 .btn-play
