--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -181,10 +181,14 @@ $dark-orange: #D25029
       height: 210px
 
 .activity-ingredients-list
+  th
+    font-size: 17.5px
   th#ingredient
     text-align: left
   th#quantity
     text-align: right
+  td
+    font-size: 14px
   td.quantity-group
     text-align: right
 
