--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -189,6 +189,12 @@ $dark-orange: #D25029
     text-align: right
   td
     font-size: 14px
+    div
+      display: inline-block
+      form
+        margin: 0px
+        input
+          width: 60px
   td.quantity-group
     text-align: right
 
