--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -147,18 +147,6 @@ $dark-orange: #D25029
     right: 0px
     height: 130px
     width: 65px
-    // font-size: 65px
-    // background-color: $orange
-    // height: 130px
-    // vertical-align: middle
-    // width: 50px
-    // text-align: center
-    // padding: 38px 0px
-    // @include boxsizing
-    // color: white
-    // text-decoration: none
-    // &:hover
-    //   background-color: $dark-orange
 
 #hero-video
   margin-top: 40px
@@ -197,6 +185,27 @@ $dark-orange: #D25029
           width: 60px
   td.quantity-group
     text-align: right
+    padding-right: 5px
+
+#footer
+  background-image: url('/assets/footer.jpg')
+  background-position: left center
+  background-repeat: no-repeat
+  background-size: 100%
+  .footer-content
+    background-color: rgba(255,255,255,.7)
+    margin: 100px
+    padding: 40px
+    .footer-body
+      width: 80%
+      float: left
+      height: 300px
+    .footer-social
+      width: 20%
+      float: right
+      height: 300px
+      padding-left: 20px
+      @include boxsizing
 
 /* Buttons *.
 .btn-play
