--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -10,7 +10,7 @@
               = image_tag('chris-large.jpg', title: 'Chris Young', class: 'img-profile')
             .span8
               :markdown
-                #{bio_chris.copy.to_s}
+                #{@chris.copy.to_s}
           .row
             .span10.horizontal-divider
         %li.instructor#instructor-grant
@@ -19,7 +19,7 @@
               = image_tag('grant-large.jpg', title: 'Chris Young', class: 'img-profile')
             .span8
               :markdown
-                #{bio_grant.copy.to_s}
+                #{@grant.copy.to_s}
           .row
             .span10.horizontal-divider
         %li.instructor#instructor-ryan
@@ -28,4 +28,4 @@
               = image_tag('ryan.jpg', title: 'Ryan Matthew Smith', class: 'img-profile')
             .span8
               :markdown
-                #{bio_ryan.copy.to_s}
+                #{@ryan.copy.to_s}
