--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -94,6 +94,8 @@
           %button.close{type: 'button', data: {dismiss: 'alert'}} x
           = msg
       = yield
+      
+    .container#footer
       = render 'layouts/footer'
     = render 'layouts/youtube'
     = javascript_include_tag 'application'
