--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,51 +1,57 @@
-.footer-content
-  .footer-body
-    %h3 About ChefSteps
-    %p
-      ChefSteps is a totally new approach to learning the art and science of cooking. Whether you are a professional chef, a culinary student, or a cooking enthusiast, if you are also a curious cook then ChefSteps is for you.
-    %p
-      Taught by a world-renowned team, you will master techniques of traditional and modernist cooking through practical, hands-on demonstrations with detailed step-by-step explanations. Unlike at other culinary schools, you will also learn the why's behind the how's from experts who bring the science of cooking to life in a compelling and practical way.
-    .span1
-      = link_to about_path do
-        = image_tag 'chris.jpg', class:'img-circle'
-    .span1
-      = image_tag 'grant.jpg', class:'img-circle'
-    .span1
-      = image_tag 'ryan.jpg', class:'img-circle'
-  .footer-social
-    = link_to 'https://www.facebook.com/Chefsteps', target: 'blank' do
-      %div
-        .btn-circle
-          %i.icon-facebook
-        Facebook
-    = link_to 'http://twitter.com/@chefsteps', target: 'blank' do
-      %div
-        .btn-circle
-          %i.icon-twitter
-        Twitter
-    = link_to 'http://pinterest.com/chefsteps/', target: 'blank' do
-      %div
-        .btn-circle
-          %i.icon-pinterest
-        Pinterest
-    = link_to 'https://plus.google.com/106370441183974123730/posts', target: 'blank' do
-      %div
-        .btn-circle
-          %i.icon-google-plus
-        Google+
-    = link_to 'Legal', legal_url
-  .text-center Handmade in Pike Place, Seattle WA
+.container-fluid#footer
+  .row-fluid
+    .span12
+      .row
+        .container#footer-body
+          .span10.well.well-opaque
+            %h3 About ChefSteps
+            %p
+              ChefSteps is a totally new approach to learning the art and science of cooking. Whether you are a professional chef, a culinary student, or a cooking enthusiast, if you are also a curious cook then ChefSteps is for you.
+            %p
+              Taught by a world-renowned team, you will master techniques of traditional and modernist cooking through practical, hands-on demonstrations with detailed step-by-step explanations. Unlike at other culinary schools, you will also learn the why's behind the how's from experts who bring the science of cooking to life in a compelling and practical way.
+            .span1
+              = link_to about_path do
+                = image_tag 'chris.jpg', class:'img-circle'
+            .span1
+              = image_tag 'grant.jpg', class:'img-circle'
+            .span1
+              = image_tag 'ryan.jpg', class:'img-circle'
+          .span2
+            = link_to 'https://www.facebook.com/Chefsteps', target: 'blank' do
+              %div.footer-social
+                .btn-circle
+                  %i.icon-facebook
+                Facebook
+            = link_to 'http://twitter.com/@chefsteps', target: 'blank' do
+              %div.footer-social
+                .btn-circle
+                  %i.icon-twitter
+                Twitter
+            = link_to 'http://pinterest.com/chefsteps/', target: 'blank' do
+              %div.footer-social
+                .btn-circle
+                  %i.icon-pinterest
+                Pinterest
+            = link_to 'https://plus.google.com/106370441183974123730/posts', target: 'blank' do
+              %div.footer-social
+                .btn-circle
+                  %i.icon-google-plus
+                Google+
 
-  %div
-    %p
-      General inquiries:
-      = mail_to 'info@chefsteps.com'
-    %p
-      Press inquiries:
-      = mail_to 'press@chefsteps.com'
-    %p.creative-commons
-      %a{ href: 'http://creativecommons.org/licenses/by-nc-sa/3.0', target: '_blank' }
-        All Content is Creative Commons Attribution-NonCommercial-ShareAlike
+          .span12.text-center Handmade in Pike Place, Seattle WA
+
+          .span12
+            %p
+              General inquiries:
+              = mail_to 'info@chefsteps.com'
+            %p
+              Press inquiries:
+              = mail_to 'press@chefsteps.com'
+            %p
+              = link_to 'Legal', legal_url
+            %p.creative-commons
+              %a{ href: 'http://creativecommons.org/licenses/by-nc-sa/3.0', target: '_blank' }
+                All Content is Creative Commons Attribution-NonCommercial-ShareAlike
 
 = #TODO Delete old code below
 / #footer.hero-unit.footer.noprint
