add two columns

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -46,6 +46,17 @@ $dark-orange: #D25029
 ////////////////////////////////////////
 
 /* Media Objects */
+.two-columns
+  column-count: 2
+  column-gap: 30px
+  -webkit-column-count: 2
+  -webkit-column-gap: 30px
+  -moz-column-count: 2
+  -moz-column-gap: 30px
+  -o-column-count: 2
+  -o-column-gap: 30px
+  min-height: auto
+
 .media-centered
   position: relative
   a
@@ -104,10 +115,10 @@ $dark-orange: #D25029
 .ordered-steps
   height: 360px
   overflow: auto
-  background: -webkit-linear-gradient(white 30%, hsla(0,0%,100%,0)), -webkit-linear-gradient(hsla(0,0%,100%,0), white 70%) bottom, -webkit-radial-gradient(50% 0, rgba(0,0,0,.2), transparent 70%), -webkit-radial-gradient(50% 100%, rgba(0,0,0,.2), transparent 70%) bottom
-  background-repeat: no-repeat
-  background-size: 100% 40px, 100% 40px, 100% 14px, 100% 14px
-  background-attachment: local, local, scroll, scroll
+  //background: -webkit-linear-gradient(white 30%, hsla(0,0%,100%,0)), -webkit-linear-gradient(hsla(0,0%,100%,0), white 70%) bottom, -webkit-radial-gradient(50% 0, rgba(0,0,0,.2), transparent 70%), -webkit-radial-gradient(50% 100%, rgba(0,0,0,.2), transparent 70%) bottom
+  //background-repeat: no-repeat
+  //background-size: 100% 60px, 100% 60px, 100% 14px, 100% 14px
+  //background-attachment: local, local, scroll, scroll
   .ordered-step-item
     width: 100%
     float: left
@@ -128,6 +139,10 @@ $dark-orange: #D25029
     .step-content
       width: 70%
       padding-top: 0px
+      ul, li
+        list-style: none
+        padding: 0px
+        margin: 0px
 
 .carousel-small
   overflow: auto
