progress using select2

--- a/app/views/admin/activities/_form.html.haml
+++ b/app/views/admin/activities/_form.html.haml
@@ -1,3 +1,6 @@
+-all_ingredients = Ingredient.all.map { |i| {id: i.id, title: i.title}}
+%div#allingredients{data: {allingredients: all_ingredients.to_json}}
+
 :ruby
   field_name_prefix = "activity[steps][]"
 
