--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -31,3 +31,4 @@
     = render 'layouts/footer'
     = render 'layouts/youtube'
     = javascript_include_tag 'application'
+    = javascript_include_tag '//platform.twitter.com/widgets.js'
